core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@lifetime_on_trait.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Diplomat traits are not allowed to have any lifetime parameters.
In src/ast/snapshots/span_testing/lifetime_on_trait.rs:3:15:
...rait Trait<'a>...
        ^^^^^
